# mochad

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  decode.c  decode.h  encode.c  encode.h  global.c  global.h  makefile  mochad.c  sensorflare.c  sensorflare.h  x10_write.c  x10_write.h  x10state.c  x10state.h
apps/: bash.sh  mochad.scr  mochamon.pl  rfsectopl3.pl  simplemon.pl  x10-tk.py
cgi/: getsensors.pl  netcat.pl  x10.pl
hotplug2/: 20-usb-x10  mochad
opkg/: Makefile
udev/: 91-usb-x10-controllers.rules
